--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>cookiesaregood</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -40,6 +41,9 @@ body {
 </style>
 </head>
 <body>
+  <script>
+        document.cookie = "user=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6ImZsYWd7SldUX2FyZV9jb21tb25fdGhlc2VfZGF5c30iLCJhZG1pbiI6dHJ1ZSwianRpIjoiNTcwYzE0MjItZGE5YS00NWJjLTgzMWYtNmVhNDM3YmE3NGFiIiwiaWF0IjoxNTc0NDk0MzE2LCJleHAiOjE1NzQ0OTc5NDZ9.W6SMUMQfU-DSvqBYUd4wd0WOYyAAzR_0tRJfmRp7_TY";
+        </script>
 
 <div class="topnav">
   <a class="active" href="#home">Home</a>
