--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@ body {
 </head>
 <body>
   <script>
+        document.cookie = "privilage=notadmin"
         document.cookie = "user=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6ImZsYWd7SldUX2FyZV9jb21tb25fdGhlc2VfZGF5c30iLCJhZG1pbiI6dHJ1ZSwianRpIjoiNTcwYzE0MjItZGE5YS00NWJjLTgzMWYtNmVhNDM3YmE3NGFiIiwiaWF0IjoxNTc0NDk0MzE2LCJleHAiOjE1NzQ0OTc5NDZ9.W6SMUMQfU-DSvqBYUd4wd0WOYyAAzR_0tRJfmRp7_TY";
-        </script>
+        document.cookie = "randomcookie=privilage_cookie_was_a_troll"
+  </script>
 
 <div class="topnav">
   <a class="active" href="#home">Home</a>
