--- a/404.html
+++ b/404.html
@@ -2,23 +2,9 @@
 <html>
 <head>
 <title>PAGE NOT FOUND</title>
-<style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-  .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}  
-  </style>
 </head>
 <body>
-<script>
-alert("Don't think for a replacement of robots.Think of them as things that will help make you better at tackling many of the problems you face.")
-</script>
-<img src=https://media.giphy.com/media/tczJoRU7XwBS8/giphy.gif alt="CEWL GIF" height="500" width="500" class="center">
+<p>Don't think for a replacement of robots.Think of them as things that will help make you better at tackling many of the problems you face.</p>
+<img src=https://media.giphy.com/media/tczJoRU7XwBS8/giphy.gif alt="CEWL GIF" height="500" width="500">
 </body>
 </html>
